--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "autoprefixer-stylus": "0.14.0",
     "node-sass": "^4.8.3",
+    "nodemon": "^1.17.3",
     "prop-types": "^15.6.0",
     "react": "^16.3.0-alpha.1",
     "react-dom": "^16.3.0-alpha.1",
@@ -18,10 +19,12 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "watch": "concurrently --names \"webpack, stylus\" --prefix name \"npm run start\" \"npm run styles:watch\"",
+    "watch":
+      "concurrently --names \"webpack, styles\" --prefix name \"npm run start\" \"npm run styles:watch\"",
     "build": "react-scripts build",
     "eject": "react-scripts eject",
-    "styles": "node-sass --include-path scss ./src/css/style.scss ./src/css/style.css",
+    "styles":
+      "node-sass --include-path scss ./src/css/style.scss ./src/css/style.css",
     "styles:watch": "nodemon -e scss -x \"npm run styles\""
   }
 }
