--- a/package.json
+++ b/package.json
@@ -19,12 +19,10 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "watch":
-      "concurrently --names \"webpack, styles\" --prefix name \"npm run start\" \"npm run styles:watch\"",
+    "watch": "concurrently --names \"webpack, styles\" --prefix name \"npm run start\" \"npm run styles:watch\"",
     "build": "react-scripts build",
     "eject": "react-scripts eject",
-    "styles":
-      "node-sass --include-path scss ./src/css/style.scss ./src/css/style.css",
+    "styles": "node-sass --include-path scss ./src/css/style.scss ./src/css/style.css",
     "styles:watch": "nodemon -e scss -x \"npm run styles\""
   }
 }
